# columbo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  namedpipe-exhauster.cpp  prometheus.yaml  trace.cc
configs/: jaeger-ui.json  otel-collector-config.yaml  trace-env-config.yaml
docker-compose/: Dockerfile.trace  docker-compose-dt-tools.yaml  docker-compose-full.yaml  docker-compose-post-processing.yaml
include/analytics/: context.h  helper.h  span.h  spanner.h  timer.h  trace.h  traceContext.h  tracer.h
include/config/: config.h
include/env/: stringInternalizer.h  symtable.h  traceEnvironment.h
include/events/: event-filter.h  eventTimeBoundary.h  eventType.h  events.h  printer.h
include/exporter/: exporter.h
include/parser/: eventStreamParser.h  parser.h
include/reader/: cReader.h
include/sync/: channel.h  corobelt.h  specializations.h
include/util/: componenttable.h  concepts.h  exception.h  factory.h  log.h  string_util.h  ttlMap.h  utils.h
source/analytics/: hostSpanner.cc  networkSpanner.cpp  nicSpanner.cc  span.cpp  spanner.cpp
source/env/: symtable.cc  traceEnvironment.cc
source/events/: events.cc
source/parser/: event-stream.cpp  gem5.cc  nicbm.cc  ns3.cpp  parser.cc
source/reader/: cReader.cpp
tests/: channel-test.cpp  config-test.cpp  event-stream-parser-test.cpp  gem5-parser-test.cpp  ns3-parser-test.cpp  pipeline-test.cpp  reader-test.cpp  span-test.cpp  test-util.h  trace-env-config.yaml
tests/line-reader-test-files/: simple.txt
tests/linux_dumps/: homa-mod.dump  i40e-homa.dump  i40e-image  i40e-image-syms.dump
tests/raw-logs/: gem5-events-test.txt  ns3-raw-log.txt
tests/stream-parser-test-files/: event-stream-parser-test.txt
utils/: make_pipe.py  make_sym_tables.py
